# posner_task

./: .gitignore  README.md  leaderboard.py  parameters.json  pyproject.toml
.github/workflows/: python-package.yml
posner_task/: .gitignore  experiment.py  parameters.json  sequence.py  test_experiment.py
posner_task/tests/: test_experiment.py
src/posner/: experiment.py
tests/: conftest.py  test_config.py  test_db.py  test_experiment.py  test_visual.py
