[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
posner = "posner.experiment:main"

[project]
name = "posner"
version = "0.0.1"
authors = [
  { name="Ole Bialas", email="ole.bialas@posteo.de" },
]
description = "Psychopy implementation of the Posner attention cueing task."
readme = "README.md"
requires-python = ">=3.8,<3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["psychopy"]

[project.urls]
Homepage = "https://github.com/OleBialas/posner_task"
Issues = "https://github.com/OleBialas/posner_task/issues"

