[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
posner = "posner.experiment:main_cli"

[project]
name = "posner"
version = "0.0.1"
authors = [
  { name="Ole Bialas", email="ole.bialas@posteo.de" },
]
description = "Psychopy implementation of the Posner attention cueing task."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "psychopy",
    "pydantic",
    "watchdog",
    "pandas",
    "pygame>=2.6.1",
]

[project.urls]
Homepage = "https://github.com/OleBialas/posner_task"
Issues = "https://github.com/OleBialas/posner_task/issues"


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
posner = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.10.*"
pytest = ">=9.0.2,<10"
